--- a/stylesheets/_retina.scss
+++ b/stylesheets/_retina.scss
@@ -13,7 +13,7 @@
 	// If we have a retina image then add styles for it too
 	@if file_exists(retina_filename($image))
 	{
-		@media only screen and (-webkit-min-device-pixel-ratio: 2)
+		@media (-webkit-min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi)
 		{
 			@include background-size(image-width($image) auto);
 			background-image: image-url(retina_filename($image));
@@ -27,7 +27,7 @@
 	// If we have a retina image then add styles for it too
 	@if file_exists(retina_filename($image))
 	{
-		@media only screen and (-webkit-min-device-pixel-ratio: 2)
+		@media (-webkit-min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi)
 		{
 			@include background-size(image-width($image) auto);
 			background-image: inline-image(retina_filename($image));
